# youtube_triage

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  src.py
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 22466ffadf43_create_initial_tables.py
src/youtube_triage/: config.py  database.py  models.py  pipeline.py  transcriber.py  vector_store.py
src/youtube_triage/api/: routes.py
tests/unit/: test_pipeline.py
