[project]
name = "youtube-triage"
version = "0.1.0"
description = "YouTube video Q&A and triage using RAG"
requires-python = ">=3.10"

dependencies = [
    "langchain>=1.2.15,<2.0.0",
    "langchain-community>=0.4.1,<1.0.0",
    "langchain-core>=1.3.0,<2.0.0",
    "langchain-text-splitters>=1.1.2,<2.0.0",
    "langchain-huggingface>=1.2.2,<2.0.0",
    "langchain-chroma>=1.1.0,<2.0.0",
    "langchain-google-genai>=4.2.2,<5.0.0",
    "youtube-transcript-api>=1.2.4,<2.0.0",
    "sentence-transformers>=5.4.1,<6.0.0",
    "google-genai>=1.73.1,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "pgvector>=0.4.2,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "ruff>=0.4.0,<1.0.0",
    "mypy>=1.9.0,<2.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true